[tool.poetry]
name = "kingdomheartstools"
version = "0.1.0"
description = ""
authors = ["Marek Grzyb <grzybdev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.7.0"}
filedate = "^2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
khtools = "kingdomheartstools:app"
